# mils-pruning

./: .gitignore  README.md  pyproject.toml
notebooks/: experiment.ipynb  test.ipynb
results/: bdm_mils_accs.npy  entropy_mils_accs.npy  entropy_mils_nodes.npy  random_accs.npy
results/arch_32_32/weights/prune_step_1/: mils_max_absolute_run0_accs.npy  mils_max_absolute_run1_accs.npy  mils_max_absolute_run2_accs.npy  mils_max_absolute_run3_accs.npy  mils_max_absolute_run4_accs.npy  mils_max_absolute_run5_accs.npy  mils_max_absolute_run6_accs.npy  mils_max_absolute_run7_accs.npy  mils_max_absolute_run8_accs.npy  mils_max_absolute_run9_accs.npy  mils_max_decrease_run0_accs.npy  mils_max_decrease_run1_accs.npy  mils_max_decrease_run2_accs.npy  mils_max_decrease_run3_accs.npy  (+87 more)
saved_weights/arch_32_32/run0/: best_model.pt
saved_weights/arch_32_32/run1/: best_model.pt
saved_weights/arch_32_32/run2/: best_model.pt
saved_weights/arch_32_32/run3/: best_model.pt
saved_weights/arch_32_32/run4/: best_model.pt
saved_weights/arch_32_32/run5/: best_model.pt
saved_weights/arch_32_32/run6/: best_model.pt
saved_weights/arch_32_32/run7/: best_model.pt
saved_weights/arch_32_32/run8/: best_model.pt
saved_weights/arch_32_32/run9/: best_model.pt
saved_weights/experiment_bin01_test/: best_model.pt
saved_weights/experiment_test01/: best_model.pt
src/mils_pruning/: __init__.py  complexity.py  config.py  data.py  eval.py  experiment_runner.py  model.py  paths.py  plotter.py  pruning.py  run_node_pruning.py  run_weight_pruning.py  training.py
(+71 files in other folders)
