[tool.poetry]
name = "mils-pruning"
version = "0.1.0"
description = "Exploring MILS pruning"
authors = ["Yuji Sakabe <eyujis@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "mils_pruning", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.11"
numpy = "^1.24"
matplotlib = "^3.7"
torch = "^1.0.2"

[tool.poetry.group.dev.dependencies]
# You can add dev tools here like:
# jupyter = "^1.0"
# black = "^24.0"
# flake8 = "^6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

