[tool.poetry]
name = "mils-pruning"
version = "0.1.0"
description = "Exploring MILS pruning"
authors = ["Yuji Sakabe <eyujis@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "mils_pruning", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.11"
numpy = "^1.24"
matplotlib = "^3.7"
torch = "^2.0"
pybdm = "^0.1.0"
torchvision = "^0.22.0"
scikit-learn = "^1.6.1"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

